--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 asgiref==3.8.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
 Django==5.2
 gunicorn==23.0.0
+idna==3.10
 packaging==25.0
 pillow==11.2.1
+requests==2.32.3
 sqlparse==0.5.3
 tzdata==2025.2
+urllib3==2.4.0
 whitenoise==6.9.0
